# GitUI

./: CLAUDE.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  test.yml
doc/: 01-architecture.md  02-repo-management.md  03-workspace.md  04-history.md  05-commit-graph.md  06-diff-viewer.md  07-branches.md  08-remote.md  10-stash-reflog.md  11-ipc.md  README.md
docs/: 01-architecture.md  02-repo-management.md  03-workspace.md  04-history.md  05-commit-graph.md  06-diff-viewer.md  07-branches.md  08-remote.md  09-submodules.md  10-stash-reflog.md  11-ipc.md  12-settings.md  13-i18n.md  14-icons.md  15-merge-rebase.md  16-terminal.md  README.md
docs/plan/: 2026-04-17-01-merge-rebase.md  2026-04-17-02-conflict-warning-toast.md  2026-04-17-03-conflict-per-line.md  2026-04-17-04-toolbar-busy-per-repo.md  2026-04-17-05-build-hash-suffix.md  2026-04-18-01-drop-unreachable-commit.md  2026-04-18-02-macos-app-menu.md  2026-04-18-03-edit-message-any-commit.md  2026-04-18-04-mixed-encoding.md  2026-04-19-01-pending-improvements.md  2026-04-20-01-commit-timestamps.md  2026-04-20-01-remote-submodule-management.md  2026-04-21-01-version-display.md  2026-04-21-02-diff-toolbar-encoding.md  2026-04-23-01-wip-tree-view.md  (+8 more)
src/: App.vue  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auto_fetch.rs  lib.rs  logger.rs  main.rs  menu.rs  repo_manager.rs  terminal.rs  tray.rs  watcher.rs
src-tauri/src/commands/: branch.rs  commit.rs  diff.rs  log.rs  merge_rebase.rs  mod.rs  remote.rs  repo.rs  stash.rs  status.rs  submodule.rs  system.rs  tag.rs  terminal.rs
src-tauri/src/git/: conflict.rs  credentials.rs  encoding.rs  engine.rs  error.rs  merge.rs  mod.rs  rebase.rs  shellout.rs  test_utils.rs  types.rs
(+108 files in other folders)
