[package]
name = "gitui"
version = "0.1.0"
description = "A cross-platform Git desktop client"
authors = ["liushuai"]
edition = "2021"

[lib]
name = "gitui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = { version = "0.19", features = ["https", "ssh"] }
tokio = { version = "1", features = ["full"] }
notify = "6"
notify-debouncer-mini = "0.4"
moka = { version = "0.12", features = ["future"] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
