[package]
name = "gitui"
version = "0.7.1"
description = "A cross-platform Git desktop client"
authors = ["liushuai"]
edition = "2021"

[lib]
name = "gitui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = { version = "0.19", features = ["https", "ssh"] }
tokio = { version = "1", features = ["full"] }
notify = "6"
notify-debouncer-mini = "0.4"
ignore = "0.4"
parking_lot = "0.12"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
portable-pty = "0.8"
base64 = "0.22"
tauri-plugin-os = "2"
encoding_rs = "0.8"
chardetng = "0.1"
font-kit = { version = "0.14", features = ["source"] }
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"

[dev-dependencies]
tempfile = "3.27.0"
